@@ -1,3 +1,11 @@
+[0, 15, 91]: 2019-04-05
+  - allowing duplicate keys would not work for merge keys (reported by mamacdon on
+    `StackOverflow <https://stackoverflow.com/questions/55540686/>`__ 
+
+[0, 15, 91]: 2019-04-05
+  - allowing duplicate keys would not work for merge keys (reported by mamacdon on
+    `StackOverflow <https://stackoverflow.com/questions/55540686/>`__ 
+
 [0, 15, 90]: 2019-04-04
   - fix issue with updating `CommentedMap` from list of tuples (reported by 
     `Peter Henry <https://bitbucket.org/mosbasik/>`__)
